# mcdm

./: CHANGELOG.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
examples/: main.rs
src/: correlation.rs  criteria.rs  criteriatype.rs  dmatrix_ext.rs  errors.rs  float.rs  katex-header.html  lib.rs  methods.rs  normalization.rs  ranking.rs  rankings.rs  validation.rs  weighting.rs  weights.rs
tests/: criteria.rs  criteria_type.rs  methods.rs  normalization.rs  ranking.rs  validation.rs  weighting.rs  weights.rs
