[package]
name = "mcdm"
description = "A Rust library to assist with solving Multiple-Criteria Decision Making (MCDM) problems."
categories = ["science", "mathematics"]
keywords = ["mcdm", "multiple-criteria", "decision-making", "optimization", "ranking"]
version = "0.1.6"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/mcdm"
repository = "https://github.com/akrutsinger/mcdm"

[lib]
name = "mcdm"
path = "src/lib.rs"

[features]
default = ["std"]
std = []
alloc = []

[dependencies]
error_set = "0.6"
nalgebra = { version = "0.33", default-features = false, features = ["alloc", "libm", "macros"]  }

[dev-dependencies]
approx = "0.5"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "./src/katex-header.html"]
